# rougek

./: Cargo.toml  READMD.md  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md  refs.md
rougek/: __init__.py  cli.py
rougek/evaluation/: commands.py  main.py
rougek/extract/: commands.py  utils.py
rougek/utils/: stopwords.py  tokenizer.py  utils.py
rust/: Cargo.toml
rust/src/: lib.rs  stopwords.rs
src/: stopwords.rs
src/rougek/: __init__.py  cli.py
src/rougek/evaluation/: commands.py  main.py
src/rougek/extract/: commands.py  utils.py
src/rougek/utils/: stopwords.py  tokenizer.py
tests/: sample.hypo  sample.jsonl
