[build-system]
requires = ["maturin>=0.14,<0.15","poetry-core"]
build-backend = "maturin"

[project]
name = "rougek"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "rougek"
version = "0.1.0"
description = ""
authors = ["sobamchan <oh.sore.sore.soutarou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sienna = "^0.2.2"
spacy = "^3.5.2"
click = "^8.1.3"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
neovim = "^0.3.1"
ipython = "^8.12.0"
isort = "^5.12.0"
pytest = "^7.3.0"
mypy = "^1.2.0"
black = "^23.3.0"
mkdocs = "^1.4.3"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[tool.poetry.scripts]
rougek = "rougek.cli:main"
