[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "rougek"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

dependencies = [
  "sienna>=0.2.2",
  "spacy>=3.5.2",
  "click>=8.1.3",
  "nltk>=3.8.1",
]

readme = "README.md"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rougek._rougek"

[project.scripts]
rougek = "rougek.cli:main"
